--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 <main>
     <section id="halong">
         <h2>1. Vịnh Hạ Long</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Ha_Long_Bay_in_Vietnam.jpg" alt="Phong cảnh vịnh Hạ Long với núi đá vôi và thuyền du lịch trên mặt nước xanh biếc" width="500">
+        <img src="images/halong.jpg" alt="Phong cảnh vịnh Hạ Long" width="500">
         <p>Vịnh Hạ Long nổi tiếng với hàng nghìn đảo đá vôi và hang động kỳ thú. Nơi đây được UNESCO công nhận là di sản thiên nhiên thế giới.</p>
     </section>
 
     <section id="hue">
         <h2>2. Cố đô Huế</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Hue_Citadel.jpg" alt="Toàn cảnh kinh thành Huế với kiến trúc cổ kính và tường thành" width="500">
+        <img src="images/hue.jpg" alt="Kinh thành Huế" width="500">
         <p>Huế là cố đô của Việt Nam, nổi bật với quần thể di tích cố đô và các lăng tẩm vua chúa triều Nguyễn.</p>
     </section>
 
     <section id="danang">
         <h2>3. Đà Nẵng</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Dragon_Bridge_Da_Nang.jpg" alt="Cầu Rồng Đà Nẵng rực sáng về đêm" width="500">
+        <img src="images/danang.jpg" alt="Kinh thành Huế" width="500">
         <p>Đà Nẵng là thành phố biển hiện đại, nổi tiếng với bãi biển Mỹ Khê, Bà Nà Hills và Cầu Rồng độc đáo.</p>
     </section>
 
