--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 <main>
     <section id="halong">
         <h2>1. Vịnh Hạ Long</h2>
-        <img src="images/halong.jpg" alt="Phong cảnh vịnh Hạ Long" width="500">
+        <img src="img/halong.jpg" alt="Phong cảnh vịnh Hạ Long" width="500">
         <p>Vịnh Hạ Long nổi tiếng với hàng nghìn đảo đá vôi và hang động kỳ thú. Nơi đây được UNESCO công nhận là di sản thiên nhiên thế giới.</p>
     </section>
 
     <section id="hue">
         <h2>2. Cố đô Huế</h2>
-        <img src="images/hue.jpg" alt="Kinh thành Huế" width="500">
+        <img src="img/hue.jpg" alt="Kinh thành Huế" width="500">
         <p>Huế là cố đô của Việt Nam, nổi bật với quần thể di tích cố đô và các lăng tẩm vua chúa triều Nguyễn.</p>
     </section>
 
     <section id="danang">
         <h2>3. Đà Nẵng</h2>
-        <img src="images/danang.jpg" alt="Kinh thành Huế" width="500">
+        <img src="img/danang.jpg" alt="Kinh thành Huế" width="500">
         <p>Đà Nẵng là thành phố biển hiện đại, nổi tiếng với bãi biển Mỹ Khê, Bà Nà Hills và Cầu Rồng độc đáo.</p>
     </section>
 
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
