--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section id="danang">
         <h2>3. Đà Nẵng</h2>
-        <img src="img/danang.jpg" alt="Kinh thành Huế" width="500">
+        <img src="img/danang.jpg" alt="Cảnh đẹp Đà Nẵng" width="500">
         <p>Đà Nẵng là thành phố biển hiện đại, nổi tiếng với bãi biển Mỹ Khê, Bà Nà Hills và Cầu Rồng độc đáo.</p>
     </section>
 
@@ -55,4 +55,5 @@
 
 </body>
 </html>
+
 
